feat: Add Docker support, environment configuration, and implement JWT authentication with cookie handling